# Hermes-Skill-View

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT-PANORAMA.html  README.md  README_en.md  ROADMAP.md  RUNTIME.md  SECURITY.md  SKILL.md  pyproject.toml  setup.py
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.hermes/: AGENTS.md
.hermes/plans/: 2026-05-10_SRA-v2.0-sprint1-plan.md  2026-05-10_sprint2-plan.md  2026-05-11_SRA-sprint3-plan.md  2026-05-11_repair-sprint-plan.md  2026-05-11_sprint05-06-plan.md  2026-05-11_sprint20-plan.md  2026-05-11_sprint3-plan.md  SPRINT-PLAN-TEMPLATE.md  experience-doc-alignment.md  experience-sra-v2.0-sprint-planning.md
docs/: API-REFERENCE.md  ARCHITECTURE.md  BMAD-PANORAMA.md  DESIGN.md  DEV-WORKFLOW-IMPROVEMENT.md  EPIC-001-hermes-integration.md  EPIC-002-p0-analysis-and-fix.md  EPIC-002-v2-matching-research.md  EPIC-003-v2-enforcement-layer.md  EPIC-004.md  INTEGRATION.md  PROJECT-REPORT-DESIGN.md  PROJECT-STATUS-ANALYSIS.md  RESEARCH-MATCHING-ALGORITHMS.md  SPEC-4-1.md  SPEC-4-2.md  SPEC-4-3.md  SPEC-4-4.md  SPEC-4-5.md  SPEC-4-6.md  SPEC-4-7.md  SPRINT-PLAN-SRAS1.md  SPRINT-SRAS1-RESULT.md  STORIES-001-003.md  STORY-TEMPLATE.md  TECHDEBT-ANALYSIS.md  TEST-FRAMEWORK-DESIGN.md  VERSIONING.md  project-report.json  sra-architecture.excalidraw  sra-architecture.html
docs/stories/: SRA-003-15.md  SRA-003-16.md  SRA-004-01.md  STORY-4-1-1.md  STORY-4-1-2.md  STORY-4-1-3.md  STORY-4-1-4.md  STORY-4-1-5.md  STORY-4-2-1.md  STORY-4-2-2.md  STORY-4-2-3.md  STORY-4-3-1.md  STORY-4-3-2.md  STORY-4-3-3.md  STORY-4-4-1.md  STORY-4-4-2.md  STORY-4-4-3.md  STORY-4-5-1.md  STORY-4-5-2.md  STORY-4-5-3.md  STORY-4-6-1.md  STORY-4-6-2.md  STORY-4-7-1.md  STORY-4-7-2.md  STORY-4-7-3.md
patches/: hermes-sra-integration.patch
plugins/sra-guard/: __init__.py  client.py  formatter.py  plugin.yaml
plugins/sra-guard/tests/: test_cache.py  test_client.py  test_e2e.py  test_formatter.py  test_injection.py  test_plugin.py  test_recheck.py  test_tracking.py  test_validate_hook.py
scripts/: ac-audit-code-check.py  ac-audit.py  check-sra.py  install-hermes-integration.sh  install-hermes-plugin.sh  install.sh  set_version.py  sra-eval-v2.py  sra-eval.py
skill_advisor/: __init__.py  _version.py  advisor.py  cli.py  indexer.py  matcher.py  memory.py  skill_map.py  synonyms.py
skill_advisor/adapters/: __init__.py
skill_advisor/config/: skill_map.json
skill_advisor/runtime/: commands.py  config.py  daemon.py  dropin.py  force.py  lock.py  validate_core.py
skill_advisor/runtime/endpoints/: validate.py
tests/: TEST-DATA-MANIFESTO.md  check_fixtures.py  conftest.py  test_adapters.py  test_benchmark.py  test_cli.py  test_concurrency.py  test_config.py  test_contract.py  test_coverage.py  test_daemon.py  test_daemon_http.py  test_dropin.py  test_force.py  test_indexer.py  test_matcher.py  test_memory.py  test_singleton.py  test_skill_map.py  test_validate.py
tests/fixtures/skills/apple__apple-notes/apple-notes/: SKILL.md
tests/fixtures/skills/apple__apple-reminders/apple-reminders/: SKILL.md
tests/fixtures/skills/apple__findmy/findmy/: SKILL.md
tests/fixtures/skills/apple__imessage/imessage/: SKILL.md
tests/fixtures/skills/autonomous-ai-agents__claude-code/claude-code/: SKILL.md
tests/fixtures/skills/autonomous-ai-agents__codex/codex/: SKILL.md
tests/fixtures/skills/autonomous-ai-agents__hermes-agent/hermes-agent/: SKILL.md
tests/fixtures/skills/autonomous-ai-agents__hermes-message-injection/hermes-message-injection/: SKILL.md
tests/fixtures/skills/bmad-method/bmad-method/: SKILL.md
tests/fixtures/skills_yaml/: _all_yamls.json  apple__apple-notes__SKILL.yaml  apple__apple-reminders__SKILL.yaml  apple__findmy__SKILL.yaml  apple__imessage__SKILL.yaml  autonomous-ai-agents__claude-code__SKILL.yaml  autonomous-ai-agents__codex__SKILL.yaml  autonomous-ai-agents__hermes-agent__SKILL.yaml  autonomous-ai-agents__hermes-message-injection__SKILL.yaml  autonomous-ai-agents__opencode__SKILL.yaml  bangumi-recommender__SKILL.yaml  bmad-context-engineering__SKILL.yaml  bmad-context-insights__SKILL.yaml  bmad-method__SKILL.yaml  bmad-method__agents__bmad-agent-analyst__SKILL.yaml  bmad-method__agents__bmad-agent-architect__SKILL.yaml  bmad-method__agents__bmad-agent-dev__SKILL.yaml  bmad-method__agents__bmad-agent-pm__SKILL.yaml  bmad-method__agents__bmad-agent-tech-writer__SKILL.yaml  bmad-method__agents__bmad-agent-ux-designer__SKILL.yaml  bmad-method__all-skills__bmad-advanced-elicitation__SKILL.yaml  bmad-method__all-skills__bmad-agent-analyst__SKILL.yaml  bmad-method__all-skills__bmad-agent-architect__SKILL.yaml  bmad-method__all-skills__bmad-agent-builder__SKILL.yaml  bmad-method__all-skills__bmad-agent-dev__SKILL.yaml  bmad-method__all-skills__bmad-agent-pm__SKILL.yaml  bmad-method__all-skills__bmad-agent-tech-writer__SKILL.yaml  bmad-method__all-skills__bmad-agent-ux-designer__SKILL.yaml  bmad-method__all-skills__bmad-bmb-setup__SKILL.yaml  bmad-method__all-skills__bmad-brainstorming__SKILL.yaml  bmad-method__all-skills__bmad-check-implementation-readiness__SKILL.yaml  bmad-method__all-skills__bmad-checkpoint-preview__SKILL.yaml  bmad-method__all-skills__bmad-cis-agent-brainstorming-coach__SKILL.yaml  bmad-method__all-skills__bmad-cis-agent-creative-problem-solver__SKILL.yaml  bmad-method__all-skills__bmad-cis-agent-design-thinking-coach__SKILL.yaml  bmad-method__all-skills__bmad-cis-agent-innovation-strategist__SKILL.yaml  bmad-method__all-skills__bmad-cis-agent-presentation-master__SKILL.yaml  bmad-method__all-skills__bmad-cis-agent-storyteller__SKILL.yaml  bmad-method__all-skills__bmad-cis-design-thinking__SKILL.yaml  bmad-method__all-skills__bmad-cis-innovation-strategy__SKILL.yaml  (+275 more)
(+261 files in other folders)
