[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sra-agent"
version = "1.2.1"
description = "Skill Runtime Advisor — 让 AI Agent 知道自己有什么能力，以及什么时候该用什么能力。带守护进程、多 Agent 适配器、完整 CLI、消息前置推理中间件。"
readme = "README.md"
authors = [
    {name = "Emma (SRA Team)"},
    {name = "Kei"},
]
keywords = ["ai-agent", "skill-management", "runtime-advisor", "hermes", "llm", "daemon"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=5.1",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/JackSmith111977/Hermes-Skill-View"
Repository = "https://github.com/JackSmith111977/Hermes-Skill-View.git"
Documentation = "https://github.com/JackSmith111977/Hermes-Skill-View#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.scripts]
sra = "skill_advisor.cli:main"
srad = "skill_advisor.runtime.daemon:cmd_start"

[tool.setuptools.packages.find]
include = ["skill_advisor", "skill_advisor.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
