[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sra-agent"
dynamic = ["version"]
description = "Skill Runtime Advisor — 让 AI Agent 知道自己有什么能力，以及什么时候该用什么能力。带守护进程、多 Agent 适配器、完整 CLI、消息前置推理中间件。"
readme = "README.md"
authors = [
    {name = "Emma (SRA Team)"},
    {name = "Kei"},
]
keywords = ["ai-agent", "skill-management", "runtime-advisor", "hermes", "llm", "daemon"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=5.1",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/JackSmith111977/Hermes-Skill-View"
Repository = "https://github.com/JackSmith111977/Hermes-Skill-View.git"
Documentation = "https://github.com/JackSmith111977/Hermes-Skill-View#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.scripts]
sra = "skill_advisor.cli:main"
srad = "skill_advisor.runtime.commands:cmd_start"

[tool.setuptools.packages.find]
include = ["skill_advisor", "skill_advisor.*"]

[tool.setuptools_scm]
version_file = "skill_advisor/_version.py"
# 从 git tag 解析版本，tag 格式: v1.2.3 (v前缀可选)
tag_regex = "^(?:[\\w-]+-)?v?(?P<version>[\\d\\.a-b]{3,}(?:rc\\d+)?)$"
# Git archive 支持（用于 pip install 源码包）
git_archive = true
# 写出版本文件
write_to = "skill_advisor/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
